End of a Season
Removed Serene Seasons, while the mod is good for adding immersion it didn't really fit the style of the pack while adding loading and fps cost.

Updated a bunch of mods

Added Buildcraft Extra Lasers, will probably get removed, it adds stronger lasers for the buildcraft laser crafting system

Added Armored Arms: Makes 1st person show what armor you have on your arms.

Added Storage Drawers Extras: Adds more storage drawers for different woods, will need to check if necessary

Added Journeymap Waypoint Synching: Makes waypoints synced to account not what device you are on.

Added AE2 Web Integration: Lets you interact with AE2 system from website.

Nerfed Tier 3 Rocket Plate Recipe to require plutionium so you have to go through Nuclearcraft.

Buffed Gravity Module, you will now be able to make it from Lunar Age materials which should make lunar bases much more comfortable.

Made Tier 4 Techguns armor (Doom and Upgraded Fallout Armor) Immune to Solar Radiation and High Planetary Pressure.

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,9 @@ instance.cfg
 .minecraft/journeymap/config/5.7/journeymap.minimap.config
 .minecraft/hei_bookmarks.ini
 .minecraft/impossible_data/what_is_this_folder.txt
+.minecraft/config/fantasticlib/reference/blockstates.txt
+.minecraft/config/fantasticlib/reference/blockstates.txt
+.minecraft/config/fantasticlib/reference/blocks.txt
+.minecraft/impossible_data/what_is_this_folder.txt
+.minecraft/hei_bookmarks.ini
+.minecraft/crafttweaker.log
