--- a/.minecraft/config/AsmodeusCore/core.conf
+++ b/.minecraft/config/AsmodeusCore/core.conf
@@ -97,12 +97,20 @@ general {
     # Set custom tier for Celestial Bodies. Example: planet.mars:5
     S:celestialBodyTiers <
         planet.venus:3
-	planet.asteroids:3
-	planet.ceres:3
+        planet.asteroids:3
+        planet.ceres:3
      >
 
     # Enable/Disable debug mode.
     B:enableDebug=false
+}
+
+
+worldgen {
+    # Add custom core blocks in asteroids (GC Asteroids dimension)  Example: modid:block:meta:probability:thickness
+    S:asteroidsCoreBlocks <
+        minecraft:air:0:5:0.2
+     >
 }
 
 
