--- a/.minecraft/config/GalaxySpace/core.conf
+++ b/.minecraft/config/GalaxySpace/core.conf
@@ -18,6 +18,15 @@ client {
 }
 
 
+compatibility {
+    # Enable/Disable pressure effect for Android from MatterOverdrive.
+    B:enablePressureEffectForAndroid=true
+
+    # Enable/Disable radiation effect for Android from MatterOverdrive.
+    B:enableRadiationEffectForAndroid=true
+}
+
+
 development {
     # Enable/Disable Debug mode
     B:enableDebug=false
@@ -30,6 +39,15 @@ dimensions {
 
     # Enable/Disable Unreachable Planets/Moons
     B:enableUnreachable=true
+}
+
+
+entities {
+    # List entity for ignore suffocation damage. Format: 'modid:entity' 
+    S:"Entity List" <
+        matteroverdrive:rogue_android
+        matteroverdrive:ranged_rogue_android
+     >
 }
 
 
@@ -66,6 +84,14 @@ general {
         draconicevolution:draconic_helm
         draconicevolution:draconic_legs
         draconicevolution:draconic_boots
+        techguns:t4_praetor_boots
+        techguns:t4_praetor_leggings
+        techguns:t4_praetor_chestplate
+        techguns:t4_praetor_helmet
+        techguns:t4_power_boots
+        techguns:t4_power_leggings
+        techguns:t4_power_chestplate
+        techguns:t4_power_helmet
      >
 }
 
@@ -100,6 +126,24 @@ hardmode {
 }
 
 
+items {
+    # Amount recharge per tick for Oxygen Tank Tier EPP
+    I:rechargeOxygenTankTierEPP=2
+
+    # Amount storage for Oxygen Tank Tier 4
+    I:storageOxygenTankTier4=3500
+
+    # Amount storage for Oxygen Tank Tier 5
+    I:storageOxygenTankTier5=4000
+
+    # Amount storage for Oxygen Tank Tier 6
+    I:storageOxygenTankTier6=4500
+
+    # Amount storage for Oxygen Tank Tier EPP
+    I:storageOxygenTankTierEPP=2500
+}
+
+
 keybindings_initial {
     # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
     S:"Toggle Boots Key"=KEY_J
@@ -118,17 +162,9 @@ keybindings_initial {
 worldgen {
     # Enable/Disable Dungeons Generation on Planets/Moon (Global Config).
     B:enableDungeonsGeneration=true
-
-    # Enable/Disable New Mars oregen (diamonds, coal, gold, etc).
     B:enableMarsNewOres=true
-
-    # Enable/Disable Generation Nature Gas on Overworld.
     B:enableNatureGasGen=false
-
-    # Enable/Disable Generation Ores on Planets/Moon (Global Config).
     B:enableOresGeneration=true
-
-    # Enable/Disable Generation Ores on Overworld.
     B:enableOverworldOres=false
 
     # Enable/Disable 'World Engine' - advanced world generation
