--- a/.minecraft/config/raids/outposts.cfg
+++ b/.minecraft/config/raids/outposts.cfg
@@ -22,10 +22,39 @@ generation {
     # How close can outposts be to villages.
     I:distanceFromVillage=160
 
+    # Whats the chance a feature should generate around an outpost?
+    D:featureChance=0.5
+
+    # How many features should outposts try to spawn?
+    I:featureCount=4
+
+    # Maximum distance from an outpost features can spawn.
+    I:featureMaxDistance=32
+
+    # Minimum distance from an outpost features can spawn.
+    I:featureMinDistance=25
+
+    # Which biomes can outposts spawn in (Can specify either biomes names or Biome Dictionaries)?
+    S:generationBiomes <
+        PLAINS
+        SANDY
+        WASTELAND
+        SNOWY
+        MOUNTAIN
+     >
+
+    # Biomes outposts can never spawn in (Overrides generationBiomes, Can specify either biomes names or Biome Dictionaries)?
+    S:generationBiomesBlacklist <
+        FOREST
+     >
+
+    # Which dimensions can outposts spawn in?
+    I:generationDimensions <
+        0
+     >
+
     # Maximum chunk distance between two watchtowers, the lower the number the more likely the generation.
     I:maxDistance=32
-
-    # Which biomes can outposts spawn in?
     S:spawnBiomes <
         minecraft:plains
         minecraft:desert
@@ -33,31 +62,31 @@ generation {
         minecraft:taiga
         minecraft:ice_flats
         minecraft:taiga_cold
-	thaumcraft:eerie
-	biomesoplenty:steppe
-	biomesoplenty:bayou
-	biomesoplenty:prairie
-	biomesoplenty:boreal_forest
-	biomesoplenty:brushland
-	biomesoplenty:cold_desert
-	biomesoplenty:coniferous_forest
-	biomesoplenty:snowy_coniferous_forest
-	biomesoplenty:dead_forest
-	biomesoplenty:dead_swamp
-	biomesoplenty:fen
-	biomesoplenty:grassland
-	biomesoplenty:grove
-	biomesoplenty:maple_woods
-	biomesoplenty:moor
-	biomesoplenty:marsh
-	biomesoplenty:ominous_woods
-	biomesoplenty:seasonal_forest
-	biomesoplenty:tundra
-	biomesoplenty:snowy_forest
-	biomesoplenty:snowy_tundra
-	biomesoplenty:shield
-	biomesoplenty:woodland
-	biomesoplenty:xeric_shrubland
+        thaumcraft:eerie
+        biomesoplenty:steppe
+        biomesoplenty:bayou
+        biomesoplenty:prairie
+        biomesoplenty:boreal_forest
+        biomesoplenty:brushland
+        biomesoplenty:cold_desert
+        biomesoplenty:coniferous_forest
+        biomesoplenty:snowy_coniferous_forest
+        biomesoplenty:dead_forest
+        biomesoplenty:dead_swamp
+        biomesoplenty:fen
+        biomesoplenty:grassland
+        biomesoplenty:grove
+        biomesoplenty:maple_woods
+        biomesoplenty:moor
+        biomesoplenty:marsh
+        biomesoplenty:ominous_woods
+        biomesoplenty:seasonal_forest
+        biomesoplenty:tundra
+        biomesoplenty:snowy_forest
+        biomesoplenty:snowy_tundra
+        biomesoplenty:shield
+        biomesoplenty:woodland
+        biomesoplenty:xeric_shrubland
      >
 }
 
