--- a/.minecraft/config/srpextra/SRPEConfigMobs.cfg
+++ b/.minecraft/config/srpextra/SRPEConfigMobs.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.4.3
+~CONFIG_VERSION: 0.4.4
 
 ##########################################################################################################
 # +main
@@ -11,6 +11,116 @@
 ##########################################################################################################
 
 "+main" {
+}
+
+
+##########################################################################################################
+# ada_vermin
+#--------------------------------------------------------------------------------------------------------#
+# Vermin (Iki) Adapted Settings
+##########################################################################################################
+
+ada_vermin {
+    # Set to false if you want to disable entity. [default: true]
+    B:" Active"=true
+
+    # Armor. [range: 0.0 ~ 999999.0, default: 4.0]
+    S:"# Armor"=4.0
+
+    # Armor Toughness. [range: 0.0 ~ 999999.0, default: 1.0]
+    S:"# Armor Toughness"=1.0
+
+    # Attack damage (melee). [range: 0.0 ~ 999999.0, default: 15.0]
+    S:"# Attack Damage"=15.0
+
+    # Follow range. [range: 0.0 ~ 128.0, default: 48.0]
+    S:"# Follow Range"=48.0
+
+    # Health. [range: 0.0 ~ 999999.0, default: 80.0]
+    S:"# Health"=80.0
+
+    # Knockback resistance. [range: 0.0 ~ 999999.0, default: 1.5]
+    S:"# Knockback Resistance"=1.5
+
+    # Movement speed. [range: 0.0 ~ 99.0, default: 0.4]
+    S:"# Movement Speed"=0.4
+
+    # Loot TableEx. "100;minecraft:nether_star;0;5;1" Where:  
+    #  "100" is the chance to drop (100%), 
+    #  "minecraft:nether_star" is the item, 
+    #  "0" is the meta of items, 
+    #  "5" is the max number of items, 
+    #  "1" is the min number of items  
+    #  [default: [60;srparasites:lurecomponent4;0;3;1], [20;srparasites:bone;0;2;1]]
+    S:"$ Loot Table" <
+        60;srparasites:lurecomponent4;0;3;1
+        20;srparasites:bone;0;2;1
+     >
+
+    # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
+    #  "50" it's a chance to create an entity (50%), 
+    #  "minecraft:zombie" is the entity, 
+    #  "5" is the maximum number of entities, 
+    #  "1" is a minimum number of entities  
+    #  [default: ]
+    S:"& List Mobs Inside" <
+     >
+
+    # The list of effects that will be applied to the creatures that were spawned after deathEx. "100;minecraft:speed;5;1;1000;500;true" Where:  
+    #  "100" it's a chance to apply an effect (100%), 
+    #  "minecraft:speed" is the effect, 
+    #  "5" is the maximum level effect, 
+    #  "1" is a minimum level effect, 
+    #  "1000" Applies the effect of the potion for a maximum of 1000 ticks (50 seconds), 
+    #  "500" Applies the effect of the potion for a minimum of 500 ticks (25 seconds), 
+    #  "true" effect particle  
+    #  [default: ]
+    S:"& List of Bonus Effects for Mobs Inside" <
+     >
+
+    # Entity creation distance from entity center. [range: 0 ~ 999, default: 0]
+    I:"& Mobs Inside Spawn Distance"=0
+
+    # Max: XZ Velocity. [range: 0.0 ~ 100.0, default: 0.5]
+    S:"& Mobs Inside Velocity XZ"=0.5
+
+    # Max: Y Velocity. [range: 0.0 ~ 100.0, default: 1.5]
+    S:"& Mobs Inside Velocity Y"=1.5
+
+    # A list of entities summoned during skill execution.Ex. "50;minecraft:zombie;5;1" Where:  
+    #  "50" it's a chance to create an entity (50%), 
+    #  "minecraft:zombie" is the entity, 
+    #  "5" is the maximum number of entities, 
+    #  "1" is a minimum number of entities  
+    #  [default: [80;srparasites:gnat;3;1], [20;srparasites:gadfly;2;1]]
+    S:"* Skill Spawn" <
+        80;srparasites:gnat;3;1
+        20;srparasites:gadfly;2;1
+     >
+
+    # Cooldown time in ticks between skill uses. (If -1, the skill will not be added) [range: -1 ~ 9999999, default: 30]
+    I:"* Skill Spawn Cooldown"=30
+
+    # A list of effects that will be applied to entities spawned by the skill.Ex. "100;minecraft:speed;5;1;1000;500;true" Where:  
+    #  "100" it's a chance to apply an effect (100%), 
+    #  "minecraft:speed" is the effect, 
+    #  "5" is the maximum level effect, 
+    #  "1" is a minimum level effect, 
+    #  "1000" Applies the effect of the potion for a maximum of 1000 ticks (50 seconds), 
+    #  "500" Applies the effect of the potion for a minimum of 500 ticks (25 seconds), 
+    #  "true" effect particle  
+    #  [default: ]
+    S:"* Skill Spawn Effects" <
+     >
+
+    # Cooldown between projectile launch attempts at the target, like with Yelloweye. (If -1, the skill will not be added) [range: -1 ~ 9999999, default: -1]
+    I:"+ Skill Shoot Projectile"=-1
+
+    # Cooldown between skill uses (If -1, the skill will not be added). [range: -1 ~ 9999999, default: 80]
+    I:"@ Cooldown Skill"=80
+
+    # The maximum block hardness a parasite can break with its ability. [range: -1.0 ~ 9999999.0, default: 1.0]
+    S:"@ Max Block Hardness"=1.0
 }
 
 
@@ -58,10 +168,10 @@ assimilated_evoker {
     #  "5" is the max number of items, 
     #  "1" is the min number of items,
     #  (Optional)"0,1,4" are skins for which the loot table will be applied.
-    #  [default: [30;srparasites:lurecomponent2;0;1;1], [15;srparasites:lurecomponent3;0;2;1]]
+    #  [default: [20;srparasites:lurecomponent2;0;1;1], [80;srparasites:assimilated_flesh;0;2;1]]
     S:"$ Loot Table ADVANCED" <
-        30;srparasites:lurecomponent2;0;1;1
-        15;srparasites:lurecomponent3;0;2;1
+        20;srparasites:lurecomponent2;0;1;1
+        80;srparasites:assimilated_flesh;0;2;1
      >
 
     # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
@@ -226,10 +336,10 @@ assimilated_ocelot {
     #  "0" is the meta of items, 
     #  "5" is the max number of items, 
     #  "1" is the min number of items  
-    #  [default: [20;srparasites:lurecomponent2;0;2;1], [10;srparasites:lurecomponent3;0;1;1]]
+    #  [default: [10;srparasites:lurecomponent2;0;1;1], [70;srparasites:assimilated_flesh;0;1;1]]
     S:"$ Loot Table" <
-        20;srparasites:lurecomponent2;0;2;1
-        10;srparasites:lurecomponent3;0;1;1
+        10;srparasites:lurecomponent2;0;1;1
+        70;srparasites:assimilated_flesh;0;1;1
      >
 
     # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
@@ -237,10 +347,10 @@ assimilated_ocelot {
     #  "minecraft:zombie" is the entity, 
     #  "5" is the maximum number of entities, 
     #  "1" is a minimum number of entities  
-    #  [default: [40;srparasites:buglin;2;1], [30;srpextra:sim_ocelot_head;1;1]]
+    #  [default: [40;srparasites:buglin;2;1], [30;srparasites:sim_ocelot_head;1;1]]
     S:"& List Mobs Inside" <
         40;srparasites:buglin;2;1
-        30;srpextra:sim_ocelot_head;1;1
+        30;srparasites:sim_ocelot_head;1;1
      >
 
     # The list of effects that will be applied to the creatures that were spawned after entity death.Ex. "100;minecraft:speed;5;1;1000;500;true" Where:  
@@ -375,10 +485,10 @@ assimilated_vindicator {
     #  "5" is the max number of items, 
     #  "1" is the min number of items,
     #  (Optional)"0,1,4" are skins for which the loot table will be applied.
-    #  [default: [30;srparasites:lurecomponent2;0;1;1], [15;srparasites:lurecomponent3;0;2;1]]
+    #  [default: [10;srparasites:lurecomponent2;0;1;1], [80;srparasites:assimilated_flesh;0;2;1]]
     S:"$ Loot Table ADVANCED" <
-        30;srparasites:lurecomponent2;0;1;1
-        15;srparasites:lurecomponent3;0;2;1
+        10;srparasites:lurecomponent2;0;1;1
+        80;srparasites:assimilated_flesh;0;2;1
      >
 
     # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
@@ -386,10 +496,10 @@ assimilated_vindicator {
     #  "minecraft:zombie" is the entity, 
     #  "5" is the maximum number of entities, 
     #  "1" is a minimum number of entities  
-    #  [default: [80;srparasites:buglin;3;1], [40;srpextra:sim_vindicator_head;1;1]]
+    #  [default: [80;srparasites:buglin;3;1], [40;srparasites:sim_vindicator_head;1;1]]
     S:"& List Mobs Inside" <
         80;srparasites:buglin;3;1
-        40;srpextra:sim_vindicator_head;1;1
+        40;srparasites:sim_vindicator_head;1;1
      >
 
     # The list of effects that will be applied to the creatures that were spawned after entity death.Ex. "100;minecraft:speed;5;1;1000;500;true" Where:  
@@ -524,10 +634,10 @@ assimilated_witch {
     #  "5" is the max number of items, 
     #  "1" is the min number of items,
     #  (Optional)"0,1,4" are skins for which the loot table will be applied.
-    #  [default: [30;srparasites:lurecomponent2;0;1;1], [15;srparasites:lurecomponent3;0;2;1], [10;quark:witch_hat;0;1;1;0]]
+    #  [default: [10;srparasites:lurecomponent2;0;1;1], [80;srparasites:assimilated_flesh;0;2;1], [10;quark:witch_hat;0;1;1;0]]
     S:"$ Loot Table ADVANCED" <
-        30;srparasites:lurecomponent2;0;1;1
-        15;srparasites:lurecomponent3;0;2;1
+        10;srparasites:lurecomponent2;0;1;1
+        80;srparasites:assimilated_flesh;0;2;1
         10;quark:witch_hat;0;1;1;0
      >
 
@@ -536,10 +646,10 @@ assimilated_witch {
     #  "minecraft:zombie" is the entity, 
     #  "5" is the maximum number of entities, 
     #  "1" is a minimum number of entities  
-    #  [default: [80;srparasites:buglin;3;1], [40;srpextra:sim_witch_head;1;1]]
+    #  [default: [80;srparasites:buglin;3;1], [40;srparasites:sim_witch_head;1;1]]
     S:"& List Mobs Inside" <
         80;srparasites:buglin;3;1
-        40;srpextra:sim_witch_head;1;1
+        40;srparasites:sim_witch_head;1;1
      >
 
     # The list of effects that will be applied to the creatures that were spawned after entity death.Ex. "100;minecraft:speed;5;1;1000;500;true" Where:  
@@ -631,6 +741,80 @@ assimilated_witch_head {
 
 
 ##########################################################################################################
+# fer_wolf
+#--------------------------------------------------------------------------------------------------------#
+# Feral Wolf (SRPE) Settings
+##########################################################################################################
+
+fer_wolf {
+    # Replace the SRP entity with the SRPE entity. [default: true]
+    B:" replace fer_wolf"=true
+
+    # Armor. [range: 0.0 ~ 999999.0, default: 4.0]
+    S:"# Armor"=4.0
+
+    # Armor Toughness. [range: 0.0 ~ 999999.0, default: 1.0]
+    S:"# Armor Toughness"=1.0
+
+    # Attack damage (melee). [range: 0.0 ~ 999999.0, default: 15.0]
+    S:"# Attack Damage"=15.0
+
+    # Follow range. [range: 0.0 ~ 128.0, default: 20.0]
+    S:"# Follow Range"=20.0
+
+    # Health. [range: 0.0 ~ 999999.0, default: 16.0]
+    S:"# Health"=16.0
+
+    # Knockback resistance. [range: 0.0 ~ 999999.0, default: 0.4]
+    S:"# Knockback Resistance"=0.4
+
+    # Movement speed. [range: 0.0 ~ 99.0, default: 0.23]
+    S:"# Movement Speed"=0.23
+
+    # Loot TableEx. "100;minecraft:nether_star;0;5;1;0,1,4" Where:  
+    #  "100" is the chance to drop (100%), 
+    #  "minecraft:nether_star" is the item,
+    #  "0" is the meta of items, 
+    #  "5" is the max number of items, 
+    #  "1" is the min number of items,
+    #  (Optional)"0,1,4" are skins for which the loot table will be applied.
+    #  [default: ]
+    S:"$ Loot Table ADVANCED" <
+     >
+
+    # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
+    #  "50" it's a chance to create an entity (50%), 
+    #  "minecraft:zombie" is the entity, 
+    #  "5" is the maximum number of entities, 
+    #  "1" is a minimum number of entities  
+    #  [default: ]
+    S:"& List Mobs Inside" <
+     >
+
+    # The list of effects that will be applied to the creatures that were spawned after entity death.Ex. "100;minecraft:speed;5;1;1000;500;true" Where:  
+    #  "100" it's a chance to apply an effect (100%), 
+    #  "minecraft:speed" is the effect, 
+    #  "5" is the maximum level effect, 
+    #  "1" is a minimum level effect, 
+    #  "1000" Applies the effect of the potion for a maximum of 1000 ticks (50 seconds), 
+    #  "500" Applies the effect of the potion for a minimum of 500 ticks (25 seconds), 
+    #  "true" effect particle  
+    #  [default: ]
+    S:"& List of Bonus Effects for Mobs Inside" <
+     >
+
+    # Entity creation distance from entity center. [range: 0 ~ 999, default: 0]
+    I:"& Mobs Inside Spawn Distance"=0
+
+    # Max: XZ Velocity. [range: 0.0 ~ 100.0, default: 0.5]
+    S:"& Mobs Inside Velocity XZ"=0.5
+
+    # Max: Y Velocity. [range: 0.0 ~ 100.0, default: 1.0]
+    S:"& Mobs Inside Velocity Y"=1.0
+}
+
+
+##########################################################################################################
 # hijacked_creeper
 #--------------------------------------------------------------------------------------------------------#
 # Hijacked Creeper Settings
@@ -651,6 +835,9 @@ hijacked_creeper {
 
     # Fuse time. [range: 0 ~ 999, default: 30]
     I:" Fuse Time"=30
+
+    # If true, then the gnats will attack the creeper, turning it into a hijacked version. [default: true]
+    B:" Gnat Attack Creeper"=true
 
     # Armor. [range: 0.0 ~ 999999.0, default: 1.0]
     S:"# Armor"=1.0
@@ -685,10 +872,9 @@ hijacked_creeper {
     #  "0" is the meta of items, 
     #  "5" is the max number of items, 
     #  "1" is the min number of items  
-    #  [default: [60;minecraft:gunpowder;0;2;1], [20;srparasites:lurecomponent2;0;1;1]]
+    #  [default: [30;minecraft:gunpowder;0;1;1]]
     S:"$ Loot Table" <
-        60;minecraft:gunpowder;0;2;1
-        20;srparasites:lurecomponent2;0;1;1
+        30;minecraft:gunpowder;0;1;1
      >
 
     # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
@@ -696,10 +882,10 @@ hijacked_creeper {
     #  "minecraft:zombie" is the entity, 
     #  "5" is the maximum number of entities, 
     #  "1" is a minimum number of entities  
-    #  [default: [80;srparasites:buglin;4;1], [70;srpextra:hijacked_creeper_head;1;1]]
+    #  [default: [80;srparasites:buglin;4;1], [70;srparasites:hijacked_creeper_head;1;1]]
     S:"& List Mobs Inside" <
         80;srparasites:buglin;4;1
-        70;srpextra:hijacked_creeper_head;1;1
+        70;srparasites:hijacked_creeper_head;1;1
      >
 
     # The list of effects that will be applied to the creatures that were spawned after death.Ex. "100;minecraft:speed;5;1;1000;500;true" Where:  
@@ -837,11 +1023,10 @@ hijacked_skeleton {
     #  "0" is the meta of items, 
     #  "5" is the max number of items, 
     #  "1" is the min number of items  
-    #  [default: [50;minecraft:bone;0;1;2], [20;srparasites:lurecomponent2;0;1;1], [10;srparasites:lurecomponent3;0;2;1]]
+    #  [default: [60;minecraft:bone;0;1;2], [40;srparasites:lurecomponent2;0;1;1]]
     S:"$ Loot Table" <
-        50;minecraft:bone;0;1;2
-        20;srparasites:lurecomponent2;0;1;1
-        10;srparasites:lurecomponent3;0;2;1
+        60;minecraft:bone;0;1;2
+        40;srparasites:lurecomponent2;0;1;1
      >
 
     # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
@@ -994,11 +1179,10 @@ hijacked_skeleton_stray {
     #  "0" is the meta of items, 
     #  "5" is the max number of items, 
     #  "1" is the min number of items  
-    #  [default: [50;minecraft:bone;0;1;2], [20;srparasites:lurecomponent2;0;1;1], [10;srparasites:lurecomponent3;0;2;1]]
+    #  [default: [60;minecraft:bone;0;1;2], [40;srparasites:lurecomponent2;0;1;1]]
     S:"$ Loot Table" <
-        50;minecraft:bone;0;1;2
-        20;srparasites:lurecomponent2;0;1;1
-        10;srparasites:lurecomponent3;0;2;1
+        60;minecraft:bone;0;1;2
+        40;srparasites:lurecomponent2;0;1;1
      >
 
     # List of creatures that will appear after the deathEx. "50;minecraft:zombie;5;1" Where:  
@@ -1102,10 +1286,8 @@ stalker {
     #  "0" is the meta of items, 
     #  "5" is the max number of items, 
     #  "1" is the min number of items  
-    #  [default: [5;srparasites:lurecomponent5;0;1;1], [20;srparasites:lurecomponent2;0;1;1], [40;srparasites:lurecomponent3;0;2;1]]
+    #  [default: [40;srparasites:lurecomponent3;0;2;1]]
     S:"$ Loot Table" <
-        5;srparasites:lurecomponent5;0;1;1
-        20;srparasites:lurecomponent2;0;1;1
         40;srparasites:lurecomponent3;0;2;1
      >
 
@@ -1127,12 +1309,8 @@ stalker {
     #  "1000" Applies the effect of the potion for a maximum of 1000 ticks (50 seconds), 
     #  "500" Applies the effect of the potion for a minimum of 500 ticks (25 seconds), 
     #  "true" effect particle  
-    #  [default: [30;minecraft:speed;0;0;500;100;false], [20;minecraft:regeneration;0;0;500;100;false], [20;minecraft:resistance;1;0;500;100;false], [10;minecraft:slowness;1;0;500;100;false]]
+    #  [default: ]
     S:"& List of Bonus Effects for Mobs Inside" <
-        30;minecraft:speed;0;0;500;100;false
-        20;minecraft:regeneration;0;0;500;100;false
-        20;minecraft:resistance;1;0;500;100;false
-        10;minecraft:slowness;1;0;500;100;false
      >
 
     # Entity creation distance from entity center. [range: 0 ~ 999, default: 0]
@@ -1149,6 +1327,12 @@ stalker {
 
     # Spawn only the first creatures from the roll? [default: false]
     B:"& Only One Mobs Inside"=false
+
+    # Cooldown between skill uses (If -1, the skill will not be added). [range: -1 ~ 9999999, default: 80]
+    I:"@ Cooldown Skill"=80
+
+    # The maximum block hardness a parasite can break with its ability. [range: -1.0 ~ 9999999.0, default: 0.1]
+    S:"@ Max Block Hardness"=0.1
 }
 
 
