--- a/.minecraft/config/srpextra/SRPEConfigSystem.cfg
+++ b/.minecraft/config/srpextra/SRPEConfigSystem.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.4.3
+~CONFIG_VERSION: 0.4.4
 
 ##########################################################################################################
 # compatibility
@@ -16,21 +16,23 @@ compatibility {
     # The bloom tier is the base bloom level needed to create or salvage it.
     # List a parasite as 'resourceLocation|tier|cost' without the quotes. 'srparasites:rupter|0|3' is a good example.
     # 'resourceLocation|tier|cost|addedFuseTime' can be used to add more ticks to the construction time for a parasite in a factory.
-    # This extra fuse time is unaffected by the Global Fuse Scalar. [default: [srpextra:stalker|2|30], [srpextra:sim_ocelot|1|10], [srpextra:sim_ocelot_head|1|5], [srpextra:sim_vindicator|1|15], [srpextra:sim_vindicator_head|1|10], [srpextra:sim_evoker|1|20|100], [srpextra:sim_witch|1|10], [srpextra:sim_witch_head|1|5], [srpextra:hijacked_creeper|0|10], [srpextra:hijacked_creeper_head|0|5], [srpextra:hijacked_skeleton|0|10], [srpextra:hijacked_skeleton_head|0|5], [srpextra:hijacked_skeleton_stray|0|10]]
+    # This extra fuse time is unaffected by the Global Fuse Scalar. [default: [srparasites:sim_ocelot|1|10], [srparasites:sim_ocelot_head|1|5], [srparasites:sim_vindicator|1|15], [srparasites:sim_vindicator_head|1|10], [srparasites:sim_evoker|1|20|100], [srparasites:sim_witch|1|10], [srparasites:sim_witch_head|1|5], [srparasites:hijacked_creeper|0|10], [srparasites:hijacked_creeper_head|0|5], [srparasites:hijacked_skeleton|0|10], [srparasites:hijacked_skeleton_head|0|5], [srparasites:hijacked_skeleton_stray|0|10], [srparasites:feral_wolf|1|25], [srparasites:stalker|2|30], [srparasites:ada_vermin|3|80|120]]
     S:cotesiaCompatibilityCostSettings <
-        srpextra:stalker|2|30
-        srpextra:sim_ocelot|1|10
-        srpextra:sim_ocelot_head|1|5
-        srpextra:sim_vindicator|1|15
-        srpextra:sim_vindicator_head|1|10
-        srpextra:sim_evoker|1|20|100
-        srpextra:sim_witch|1|10
-        srpextra:sim_witch_head|1|5
-        srpextra:hijacked_creeper|0|10
-        srpextra:hijacked_creeper_head|0|5
-        srpextra:hijacked_skeleton|0|10
-        srpextra:hijacked_skeleton_head|0|5
-        srpextra:hijacked_skeleton_stray|0|10
+        srparasites:sim_ocelot|1|10
+        srparasites:sim_ocelot_head|1|5
+        srparasites:sim_vindicator|1|15
+        srparasites:sim_vindicator_head|1|10
+        srparasites:sim_evoker|1|20|100
+        srparasites:sim_witch|1|10
+        srparasites:sim_witch_head|1|5
+        srparasites:hijacked_creeper|0|10
+        srparasites:hijacked_creeper_head|0|5
+        srparasites:hijacked_skeleton|0|10
+        srparasites:hijacked_skeleton_head|0|5
+        srparasites:hijacked_skeleton_stray|0|10
+        srparasites:feral_wolf|1|25
+        srparasites:stalker|2|30
+        srparasites:ada_vermin|3|80|120
      >
 
     # Removes the spawn of Nest and Flesh Worm (If SRPExtra Structures on). [default: false]
@@ -116,11 +118,11 @@ merge_system {
     # Assimilated mob list with their values used in the merge system to spawn mobs. Ex. "srparasites:infhuman;22"  Where: 
     #  "srparasites:infhuman" is for the entity (only works for Assimilated versions minus Big Spider, Enderdragon), 
     #  "22" is for the value the Moving Flesh will have (value must be an integer). 
-    #  [default: [srpextra:sim_witch;1], [srpextra:sim_vindicator;1], [srpextra:sim_ocelot;1]]
+    #  [default: [srparasites:sim_witch;1], [srparasites:sim_vindicator;1], [srparasites:sim_ocelot;1]]
     S:SRPEMergeInfValues <
-        srpextra:sim_witch;1
-        srpextra:sim_vindicator;1
-        srpextra:sim_ocelot;1
+        srparasites:sim_witch;1
+        srparasites:sim_vindicator;1
+        srparasites:sim_ocelot;1
      >
 
     # Mob list used in the merge system to spawn mobs. Ex. "minecraft:zombie;11"  Where: 
@@ -157,74 +159,75 @@ phase {
     S:"Phase 1" <
      >
 
-    # Custom SRPExtra Phase 2 Spawn Entity List [default: [5;srpextra:sim_vindicator;1;2;all;spooky], [3;srpextra:sim_evoker;1;1;all;spooky], [5;srpextra:sim_witch;1;2;all;all], [2;srpextra:hijacked_creeper;1;2;all;all], [3;srpextra:hijacked_skeleton_stray;1;2;all;cold,hills], [2;srpextra:hijacked_skeleton;1;2;all;all], [30;srparasites:sim_squid;1;3;all;ocean,beach,river]]
+    # Custom SRPExtra Phase 2 Spawn Entity List [default: [25;srparasites:sim_vindicator;1;2;all;spooky], [5;srparasites:sim_evoker;1;1;all;spooky], [25;srparasites:sim_witch;1;2;all;all], [25;srparasites:sim_ocelot;1;2;all;jungle], [25;srparasites:sim_squid;1;3;all;ocean,beach,river]]
     S:"Phase 2" <
-        5;srpextra:sim_vindicator;1;2;all;spooky
-        3;srpextra:sim_evoker;1;1;all;spooky
-        5;srpextra:sim_witch;1;2;all;all
-        2;srpextra:hijacked_creeper;1;2;all;all
-        3;srpextra:hijacked_skeleton_stray;1;2;all;cold,hills
-        2;srpextra:hijacked_skeleton;1;2;all;all
-        30;srparasites:sim_squid;1;3;all;ocean,beach,river
+        25;srparasites:sim_vindicator;1;2;all;spooky
+        5;srparasites:sim_evoker;1;1;all;spooky
+        25;srparasites:sim_witch;1;2;all;all
+        25;srparasites:sim_ocelot;1;2;all;jungle
+        25;srparasites:sim_squid;1;3;all;ocean,beach,river
      >
 
-    # Custom SRPExtra Phase 3 Spawn Entity List [default: [5;srpextra:sim_vindicator;1;3;all;spooky], [5;srpextra:sim_evoker;1;1;all;spooky], [8;srpextra:sim_witch;1;2;all;all], [5;srpextra:hijacked_creeper;1;2;all;all], [5;srpextra:hijacked_skeleton_stray;1;3;all;cold,hills], [5;srpextra:hijacked_skeleton;1;3;all;all], [25;srparasites:pri_devourer;1;2;all;ocean,beach,river], [40;srparasites:sim_squid;1;3;all;ocean,beach,river]]
+    # Custom SRPExtra Phase 3 Spawn Entity List [default: [25;srparasites:sim_vindicator;1;3;all;spooky], [5;srparasites:sim_evoker;1;1;all;spooky], [25;srparasites:sim_witch;1;2;all;all], [25;srparasites:sim_ocelot;1;2;all;jungle], [10;srparasites:hijacked_creeper;1;2;all;all], [10;srparasites:hijacked_skeleton_stray;1;3;all;cold,hills], [10;srparasites:hijacked_skeleton;1;3;all;all], [25;srparasites:sim_squid;1;3;all;ocean,beach,river]]
     S:"Phase 3" <
-        5;srpextra:sim_vindicator;1;3;all;spooky
-        5;srpextra:sim_evoker;1;1;all;spooky
-        8;srpextra:sim_witch;1;2;all;all
-        5;srpextra:hijacked_creeper;1;2;all;all
-        5;srpextra:hijacked_skeleton_stray;1;3;all;cold,hills
-        5;srpextra:hijacked_skeleton;1;3;all;all
-        25;srparasites:pri_devourer;1;2;all;ocean,beach,river
-        40;srparasites:sim_squid;1;3;all;ocean,beach,river
+        25;srparasites:sim_vindicator;1;3;all;spooky
+        5;srparasites:sim_evoker;1;1;all;spooky
+        25;srparasites:sim_witch;1;2;all;all
+        25;srparasites:sim_ocelot;1;2;all;jungle
+        10;srparasites:hijacked_creeper;1;2;all;all
+        10;srparasites:hijacked_skeleton_stray;1;3;all;cold,hills
+        10;srparasites:hijacked_skeleton;1;3;all;all
+        25;srparasites:sim_squid;1;3;all;ocean,beach,river
      >
 
-    # Custom SRPExtra Phase 4 Spawn Entity List [default: [5;srpextra:sim_vindicator;1;3;all;spooky], [5;srpextra:sim_evoker;1;1;all;spooky], [10;srpextra:sim_witch;1;2;all;all], [8;srpextra:hijacked_creeper;1;3;all;all], [5;srpextra:hijacked_skeleton_stray;1;3;all;cold,hills], [5;srpextra:hijacked_skeleton;1;3;all;all], [30;srparasites:pri_devourer;1;2;all;ocean,beach,river], [4;srpextra:stalker;1;2;all;all], [40;srparasites:sim_squid;1;3;all;ocean,beach,river]]
+    # Custom SRPExtra Phase 4 Spawn Entity List [default: [25;srparasites:sim_vindicator;1;3;all;spooky], [10;srparasites:sim_evoker;1;1;all;spooky], [25;srparasites:sim_witch;1;2;all;all], [25;srparasites:sim_ocelot;1;2;all;jungle], [10;srparasites:hijacked_creeper;1;3;all;all], [10;srparasites:hijacked_skeleton_stray;1;3;all;cold,hills], [10;srparasites:hijacked_skeleton;1;3;all;all], [3;srparasites:stalker;1;1;all;all], [15;srparasites:pri_devourer;1;2;all;ocean,beach,river], [25;srparasites:sim_squid;1;3;all;ocean,beach,river]]
     S:"Phase 4" <
-        5;srpextra:sim_vindicator;1;3;all;spooky
-        5;srpextra:sim_evoker;1;1;all;spooky
-        10;srpextra:sim_witch;1;2;all;all
-        8;srpextra:hijacked_creeper;1;3;all;all
-        5;srpextra:hijacked_skeleton_stray;1;3;all;cold,hills
-        5;srpextra:hijacked_skeleton;1;3;all;all
-        30;srparasites:pri_devourer;1;2;all;ocean,beach,river
-        4;srpextra:stalker;1;2;all;all
-        40;srparasites:sim_squid;1;3;all;ocean,beach,river
+        25;srparasites:sim_vindicator;1;3;all;spooky
+        10;srparasites:sim_evoker;1;1;all;spooky
+        25;srparasites:sim_witch;1;2;all;all
+        25;srparasites:sim_ocelot;1;2;all;jungle
+        10;srparasites:hijacked_creeper;1;3;all;all
+        10;srparasites:hijacked_skeleton_stray;1;3;all;cold,hills
+        10;srparasites:hijacked_skeleton;1;3;all;all
+        3;srparasites:stalker;1;1;all;all
+        15;srparasites:pri_devourer;1;2;all;ocean,beach,river
+        25;srparasites:sim_squid;1;3;all;ocean,beach,river
      >
 
-    # Custom SRPExtra Phase 5 Spawn Entity List [default: [8;srpextra:sim_vindicator;1;5;all;spooky], [5;srpextra:sim_evoker;1;1;all;spooky], [8;srpextra:sim_witch;1;3;all;all], [5;srpextra:hijacked_creeper;1;2;all;all], [4;srpextra:hijacked_skeleton_stray;1;3;all;cold,hills], [4;srpextra:hijacked_skeleton;1;3;all;all], [35;srparasites:pri_devourer;1;2;all;ocean,beach,river], [3;srpextra:stalker;1;2;all;all], [40;srparasites:sim_squid;1;3;all;ocean,beach,river]]
+    # Custom SRPExtra Phase 5 Spawn Entity List [default: [15;srparasites:hijacked_creeper;1;2;all;all], [15;srparasites:hijacked_skeleton_stray;1;3;all;cold,hills], [15;srparasites:hijacked_skeleton;1;3;all;all], [3;srparasites:stalker;1;2;all;all], [15;srparasites:pri_devourer;1;2;all;ocean,beach,river]]
     S:"Phase 5" <
-        8;srpextra:sim_vindicator;1;5;all;spooky
-        5;srpextra:sim_evoker;1;1;all;spooky
-        8;srpextra:sim_witch;1;3;all;all
-        5;srpextra:hijacked_creeper;1;2;all;all
-        4;srpextra:hijacked_skeleton_stray;1;3;all;cold,hills
-        4;srpextra:hijacked_skeleton;1;3;all;all
-        35;srparasites:pri_devourer;1;2;all;ocean,beach,river
-        3;srpextra:stalker;1;2;all;all
-        40;srparasites:sim_squid;1;3;all;ocean,beach,river
+        15;srparasites:hijacked_creeper;1;2;all;all
+        15;srparasites:hijacked_skeleton_stray;1;3;all;cold,hills
+        15;srparasites:hijacked_skeleton;1;3;all;all
+        3;srparasites:stalker;1;2;all;all
+        15;srparasites:pri_devourer;1;2;all;ocean,beach,river
      >
 
-    # Custom SRPExtra Phase 6 Spawn Entity List [default: [40;srparasites:pri_devourer;1;3;all;ocean,beach,river]]
+    # Custom SRPExtra Phase 6 Spawn Entity List [default: [3;srparasites:stalker;1;2;all;all], [5;srparasites:ada_vermin;1;1;all;all], [15;srparasites:pri_devourer;1;3;all;ocean,beach,river]]
     S:"Phase 6" <
-        40;srparasites:pri_devourer;1;3;all;ocean,beach,river
+        3;srparasites:stalker;1;2;all;all
+        5;srparasites:ada_vermin;1;1;all;all
+        15;srparasites:pri_devourer;1;3;all;ocean,beach,river
      >
 
-    # Custom SRPExtra Phase 7 Spawn Entity List [default: ]
+    # Custom SRPExtra Phase 7 Spawn Entity List [default: [5;srparasites:ada_vermin;1;1;all;all]]
     S:"Phase 7" <
+        5;srparasites:ada_vermin;1;1;all;all
      >
 
-    # Custom SRPExtra Phase 8 Spawn Entity List [default: ]
+    # Custom SRPExtra Phase 8 Spawn Entity List [default: [5;srparasites:ada_vermin;1;2;all;all]]
     S:"Phase 8" <
+        5;srparasites:ada_vermin;1;2;all;all
      >
 
-    # Custom SRPExtra Phase 9 Spawn Entity List [default: ]
+    # Custom SRPExtra Phase 9 Spawn Entity List [default: [10;srparasites:ada_vermin;1;2;all;all]]
     S:"Phase 9" <
+        10;srparasites:ada_vermin;1;2;all;all
      >
 
-    # Custom SRPExtra Phase 10 Spawn Entity List [default: ]
+    # Custom SRPExtra Phase 10 Spawn Entity List [default: [15;srparasites:ada_vermin;1;2;all;all]]
     S:"phase 10" <
+        15;srparasites:ada_vermin;1;2;all;all
      >
 }
 
@@ -240,14 +243,14 @@ srp_spawn_location_test {
     #  "srparasites:rupter" is the parasite for which the location check will be applied,
     #  "0,1,-1" are the dimensions where it can naturally spawn ("all" - any dimension),
     #  "ocean,minecraft:forest,!spooky" are the biomes and biome types where it can naturally appear ("all" - any biomes),
-    #  "3" (Optional) is the phase after which the check will no longer apply. [default: [srpextra:sim_vindicator;all;spooky;8], [srpextra:sim_vindicator_head;all;spooky], [srpextra:sim_evoker;all;spooky;8], [srpextra:sim_ocelot;all;jungle;8], [srpextra:sim_ocelot_head;all;jungle;8], [srpextra:hijacked_skeleton_stray;all;cold,hills;8]]
+    #  "3" (Optional) is the phase after which the check will no longer apply. [default: [srparasites:sim_vindicator;all;spooky;8], [srparasites:sim_vindicator_head;all;spooky], [srparasites:sim_evoker;all;spooky;8], [srparasites:sim_ocelot;all;jungle;8], [srparasites:sim_ocelot_head;all;jungle;8], [srparasites:hijacked_skeleton_stray;all;cold,hills;8]]
     S:"Location Tests" <
-        srpextra:sim_vindicator;all;spooky;8
-        srpextra:sim_vindicator_head;all;spooky
-        srpextra:sim_evoker;all;spooky;8
-        srpextra:sim_ocelot;all;jungle;8
-        srpextra:sim_ocelot_head;all;jungle;8
-        srpextra:hijacked_skeleton_stray;all;cold,hills;8
+        srparasites:sim_vindicator;all;spooky;8
+        srparasites:sim_vindicator_head;all;spooky
+        srparasites:sim_evoker;all;spooky;8
+        srparasites:sim_ocelot;all;jungle;8
+        srparasites:sim_ocelot_head;all;jungle;8
+        srparasites:hijacked_skeleton_stray;all;cold,hills;8
      >
 }
 
@@ -259,19 +262,19 @@ srp_spawn_location_test {
 ##########################################################################################################
 
 status_effects {
-    # Table that will be used for converting mobs, the Rupter will also be using this. [default: [minecraft:witch;srpextra:sim_witch], [minecraft:vindication_illager;srpextra:sim_vindicator], [minecraft:evocation_illager;srpextra:sim_evoker], [minecraft:ocelot;srpextra:sim_ocelot]]
+    # Table that will be used for converting mobs, the Rupter will also be using this. [default: [minecraft:witch;srparasites:sim_witch], [minecraft:vindication_illager;srparasites:sim_vindicator], [minecraft:evocation_illager;srparasites:sim_evoker], [minecraft:ocelot;srparasites:sim_ocelot]]
     S:cothVictim <
-        minecraft:witch;srpextra:sim_witch
-        minecraft:vindication_illager;srpextra:sim_vindicator
-        minecraft:evocation_illager;srpextra:sim_evoker
-        minecraft:ocelot;srpextra:sim_ocelot
+        minecraft:witch;srparasites:sim_witch
+        minecraft:vindication_illager;srparasites:sim_vindicator
+        minecraft:evocation_illager;srparasites:sim_evoker
+        minecraft:ocelot;srparasites:sim_ocelot
      >
 
-    # Table that will be used for hijacking mobs. [default: [minecraft:stray;srpextra:hijacked_skeleton_stray], [minecraft:creeper;srpextra:hijacked_creeper], [minecraft:skeleton;srpextra:hijacked_skeleton]]
+    # Table that will be used for hijacking mobs. [default: [minecraft:stray;srparasites:hijacked_skeleton_stray], [minecraft:creeper;srparasites:hijacked_creeper], [minecraft:skeleton;srparasites:hijacked_skeleton]]
     S:hijackedVictim <
-        minecraft:stray;srpextra:hijacked_skeleton_stray
-        minecraft:creeper;srpextra:hijacked_creeper
-        minecraft:skeleton;srpextra:hijacked_skeleton
+        minecraft:stray;srparasites:hijacked_skeleton_stray
+        minecraft:creeper;srparasites:hijacked_creeper
+        minecraft:skeleton;srparasites:hijacked_skeleton
      >
 }
 
