--- a/instance.cfg
+++ b/instance.cfg
@@ -1,8 +1,8 @@
-AutoCloseConsole=false
+[General]
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
-JavaArchitecture=amd64
+JavaArchitecture=64
 JavaPath=C:/Program Files/Java/jre1.8.0_431/bin/javaw.exe
 JavaTimestamp=1727703116000
 JavaVersion=1.8.0_431
@@ -10,7 +10,6 @@ JoinServerOnLaunch=true
 JoinServerOnLaunchAddress=
 JoinSingleplayerWorldOnLaunch=false
 JoinSingleplayerWorldOnLaunchName=
-JoinWorldOnLaunch=false
 JvmArgs=
 LWJGLVersion=
 LaunchMaximized=true
@@ -38,18 +37,52 @@ OverrideMemory=true
 OverrideNativeWorkarounds=false
 OverrideWindow=true
 PermGen=128
+iconKey=chicken
+lastLaunchTime=1758360542732
+lastTimePlayed=3694
+name=TobyTech
+notes=
+totalTimePlayed=5033494
+ConfigVersion=1.2
+AutomaticJava=false
+ExportAuthor=
+ExportName=
+ExportOptionalFiles=true
+ExportSummary=
+ExportVersion=1.0.0
+IgnoreJavaCompatibility=false
+JavaRealArchitecture=amd64
+JavaSignature=eff49543f927689e21c9a09e4db756ad31ff7732
+JavaVendor=Oracle Corporation
+OverrideEnv=false
+OverrideLegacySettings=false
+OverrideMiscellaneous=false
+OverridePerformance=false
+Profiler=
+UseAccountForInstance=false
+linkedInstances=[]
+AutoCloseConsole=false
+CloseAfterLaunch=false
+CustomGLFWPath=
+CustomOpenALPath=
+EnableFeralGamemode=false
+EnableMangoHud=false
+Env=@Variant(\0\0\0\b\0\0\0\0)
+InstanceAccountId=
+JoinWorldOnLaunch=
+OnlineFixes=false
 PostExitCommand=
 PreLaunchCommand=
+QuitAfterGameStop=false
 RecordGameTime=true
 ShowConsole=false
 ShowConsoleOnError=true
 ShowGameTime=true
+UseDiscreteGpu=false
 UseNativeGLFW=false
 UseNativeOpenAL=false
+UseZink=false
 WrapperCommand=
-iconKey=chicken
-lastLaunchTime=1752786216011
-lastTimePlayed=644
-name=TobyTech
-notes=
-totalTimePlayed=4820419
+
+[UI]
+mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\v\x80\a\0\0\0\x4\0\0\0\a\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\x4L\0\0\0\v\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
