--- a/.minecraft/config/New Crimson Revelations.cfg
+++ b/.minecraft/config/New Crimson Revelations.cfg
@@ -81,14 +81,16 @@ general {
         # Min: 0.0
         # Max: 1.0
         D:"Primordial Scribing Tools: Curiosity Chance"=0.3
-
-        # Enables Forbidden Magic content (disable this if you prefer ReForbidden Magic's implementation of these items). [default: true]
         B:"Research: Forbidden Magic"=true
 
         # The percentage chance for a curiosity to be obtained from the Scribing Tools of Knowledge. [default: 0.2]
         # Min: 0.0
         # Max: 1.0
         D:"Scribing Tools of Knowledge: Curiosity Chance"=0.2
+
+        # Reintroduces the slower scanning functionality from Thaumcraft 4. [default: true]
+        # NOTE: This feature will always be disabled if TC4 Research Port is detected.
+        B:"Thaumometer: Old Scanning"=true
     }
 
     ##########################################################################################################
@@ -98,8 +100,19 @@ general {
     ##########################################################################################################
 
     mod_integration_settings {
+        # Automatically disables content originating from other addons if those addons are installed alongside this mod. [default: true]
+        B:"Conflicting Content Removal Check"=true
+
         # Enables Just Enough Resources integration. [default: true]
         B:"Just Enough Resources Integration"=true
+
+        # Enables Forbidden Magic content (Pickaxe of Distortion, Ring of Nutrition, and Shovel of the Purifier). [default: true]
+        # NOTE: The content will always be disabled if Conflicting Content Removal Check is kept enabled and ReForbidden Magic is installed!
+        B:"Research: Forbidden Magic"=true
+
+        # Enables the Thaumic Litmus Paper item. [default: true]
+        # NOTE: The content will always be disabled if Conflicting Content Removal Check is kept enabled and Warp Apocalypse is installed!
+        B:"Research: Thaumic Litmus Paper"=true
 
         # Enables Thaumic Augmentation integration. [default: true]
         B:"Thaumic Augmentation Integration"=true
