--- a/.minecraft/config/Universal Tweaks - Mod Integration.cfg
+++ b/.minecraft/config/Universal Tweaks - Mod Integration.cfg
@@ -5,8 +5,6 @@ general {
     abyssalcraft {
         # Disables AbyssalCraft's Plague-type mobs spawning lingering potion effects on death
         B:"Disable Plague Potion Clouds"=false
-
-        # Optimizes AbyssalCraft's item transport system to reduce tick overhead
         B:"Optimized Item Transport"=true
     }
 
@@ -57,14 +55,23 @@ general {
     }
 
     "blood magic" {
+        # Improves performance when harvesting blocks with Bound Tool's right-click and exposes block drops to HarvestDropsEvent
+        B:"Bound Tool Harvest Tweak"=true
+
         # Fixes various duplication exploits
         B:"Duplication Fixes"=true
+
+        # Fixes Routing Node fluid routing unable to support multiple liquids and soft-locking when encountering a full fluid tank
+        B:"Fluid Routing Fix"=true
 
         # Fixes memory leak when unloading worlds/switching dimensions
         B:"Memory Leak Fix"=true
 
         # Optimizes the Hellfire/Soul Forge to reduce tick time
         B:"Optimized Hellfire Forge"=true
+
+        # Fixes ritual resetting on chunk/world unload
+        B:"Ritual Fix"=true
         B:"World Unload Memory Leak Fix"=true
     }
 
@@ -218,6 +225,9 @@ general {
     }
 
     "infernal mobs" {
+        # Gets the actual display names of entities for improved naming
+        B:"Better Entity Names"=true
+
         # Enables compatibility between Infernal Mobs' Sticky effect and Reliquary's Pedestal
         B:"Sticky Pedestal Compatibility"=true
 
@@ -238,6 +248,10 @@ general {
     mekanism {
         # Fixes various duplication exploits
         B:"Duplication Fixes"=true
+
+        # Fixes a logic error allowing extracting fluids from fluid tanks regardless of requested fluid
+        # Has no effect when playing with Mekanism CEu
+        B:"Fluid Tank Extraction"=true
     }
 
     "mob stages" {
@@ -330,6 +344,9 @@ general {
     }
 
     "storage drawers" {
+        # Prevents voiding of items when near capacity limits
+        B:"Item Voiding Fix"=false
+
         # Approximate range in blocks at which drawers render contained items
         # 0 for default unlimited range
         I:"Render Range"=0
@@ -424,7 +441,6 @@ general {
     }
 
     "thaumic wonders" {
-        # Fixes various duplication exploits
         B:"Duplication Fixes"=true
     }
 
@@ -473,37 +489,45 @@ general {
 
         # Despawns unbreakable projectiles faster to improve framerates
         B:"Projectile Despawning"=true
-
-        # Enables usage of tweaks in below category to customize Tinkers' tools stats
         B:"Tool Customization"=true
 
         "tool customization" {
+            S:"Attack Damage Decay Rate"=0.9
+            D:"Cleaver Attack Damage Cutoff"=25.0
+            D:"General Attack Damage Cutoff"=15.0
+            D:"Longsword Attack Damage Cutoff"=18.0
+            D:"PlusTiC: Katana Attack Damage Cutoff"=22.0
+            D:"Rapier Attack Damage Cutoff"=13.0
+
+            # Enables usage of tweaks in below category to customize Tinkers' tools stats
+            B:"[1] Tool Customization"=true
+
+            # Sets the attack damage cutoff at which diminishing returns start for any Tinkers' tool not listed here
+            # Default value: 15.0
+            D:"[2] General Attack Damage Cutoff"=15.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the cleaver
+            # Default value: 25.0
+            D:"[3] Cleaver Attack Damage Cutoff"=25.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the longsword
+            # Default value: 18.0
+            D:"[4] Longsword Attack Damage Cutoff"=18.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the rapier
+            # Default value: 13.0
+            D:"[5] Rapier Attack Damage Cutoff"=13.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the PlusTiC katana
+            # Default value: 22.0
+            D:"[6] PlusTiC: Katana Attack Damage Cutoff"=22.0
+
             # Sets the rate at which a tool's attack damage incrementally decays depending on its damage cutoff
             # Default value: 0.9
             # Range: 0.0 - 1.0
             # Note: A rate of 1.0 means there is no damage decay
             # Note: The damage curve will cap the maximum value to (tool's damage cutoff)/(1 - decay rate)
-            S:"Attack Damage Decay Rate"=0.9
-
-            # Sets the attack damage cutoff at which diminishing returns start for the cleaver
-            # Default value: 25.0
-            D:"Cleaver Attack Damage Cutoff"=25.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for any Tinkers' tool not listed here
-            # Default value: 15.0
-            D:"General Attack Damage Cutoff"=15.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for the longsword
-            # Default value: 18.0
-            D:"Longsword Attack Damage Cutoff"=18.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for the PlusTiC katana
-            # Default value: 22.0
-            D:"PlusTiC: Katana Attack Damage Cutoff"=22.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for the rapier
-            # Default value: 13.0
-            D:"Rapier Attack Damage Cutoff"=13.0
+            S:"[7] Attack Damage Decay Rate"=0.9
         }
 
     }
@@ -529,7 +553,6 @@ general {
     }
 
     emojicord {
-        # Improves emoji context calculation to improve fps when rendering a lot of text
         B:"Emoji Context"=true
     }
 
@@ -599,6 +622,9 @@ general {
     }
 
     evilcraft {
+        # Avoid repeatedly running intensive calculations involving spawning a random Vengeance Spirit
+        B:"Vengeance Spirit Random Performance"=true
+
         # Cache the result of Vengeance Spirit checks against the config, which may attempt to build and check against hundreds of Regex Patterns every tick
         B:"Vengeance Spirit Regex Cache"=true
     }
@@ -612,6 +638,66 @@ general {
         # Instead of deleting the original itemstack being equipped, use a copy of it and do not drop armor.
         # This is primarily relevant for fixing a duplication bug involving EnderIO Armor and its interact with being "destroyed"
         B:"Copy Armor Stacks to Dummy"=true
+    }
+
+    agricraft {
+        # Fixes crash when Ender IO's Farming Station attempts to harvest Agricraft crops
+        B:"Ender IO Integration Fix"=true
+    }
+
+    backpacks {
+        # Prevents unintended offhand right-click behavior when opening backpacks
+        B:"No Offhand Interaction"=true
+    }
+
+    bewitchment {
+        # Fixes Witches' Oven consuming container fuel items
+        B:"Witches' Oven Fix"=true
+    }
+
+    "cofh world" {
+        # Prevents CoFH World features from generating in superflat world types
+        B:"Prevent Superflat Generation"=false
+    }
+
+    "cooking for blockheads" {
+        # Fixes CFB Oven consuming container fuel items
+        B:"Oven Fix"=true
+    }
+
+    corpse {
+        # Fixes opening up GUIs on a non-client thread
+        B:"Opening GUIs Off-thread Fix"=true
+    }
+
+    "electroblob's wizardry" {
+        # Fixes crash when wearing armors from Construct's Armory
+        B:"Construct's Armory Armor Fix"=true
+    }
+
+    "fps reducer" {
+        # Makes the HUD display the actual FPS of the game, instead of the FPS of the HUD itself
+        B:"Correct FPS Display"=true
+    }
+
+    "gaia dimension" {
+        # Safely access a nullable array when checking recipes in the Restructurer
+        B:"Fix Restructurer Crash"=true
+    }
+
+    "jurassic reborn" {
+        # Generates the geneticist house in villages
+        B:"Geneticist Villager House Generation"=true
+    }
+
+    "moar tinkers" {
+        # Enables Energy Eater/Repair to pull from baubles
+        B:"Baubles Compatibility"=true
+    }
+
+    "proper pumpkins mod" {
+        # Fixes a bug where converting a pumpkin from a non-horizontal face would crash
+        B:"Facing Crash Fix"=true
     }
 
 }
